--- a/my_portfolio/main_app/templates/link_page/links.html
+++ b/my_portfolio/main_app/templates/link_page/links.html
@@ -55,7 +55,13 @@
     <div class="collapse" id="drp4">
       <div class="card card-body">
           <p>My first MERN stack project. Made for buisness owners, CEOs, coworkers, and the people in between.</p>
-          <p></p>
+          <p>Allows the creation of companies, and the people directly connected to that company.</p>
+          <p>Implements oAuth and account requirements for creating, updating, and deleting.</p>
+          <p>Full CRUD capabilities of all involved components and a simple, yet legible feel.</p>
+          <p>Planned updates and components:</p>
+          <p>-Restricted access per user and user type</p>
+          <p>-Further models connected to users: reports on user/company, data collection for company</p>
+          <p>-More in depth models, smoother experience, overall refined image and presentation, additional features to boost robustness.</p>
       </div>
     </div>
     <li><a id = 'ca' href= "https://abasiccalculator.herokuapp.com/" target="_blank" rel="noopener noreferrer"> Calculator</a></li>
