--- a/my_portfolio/main_app/templates/link_page/links.html
+++ b/my_portfolio/main_app/templates/link_page/links.html
@@ -49,7 +49,7 @@
     </div>
     <li><a id = 'fb' href= "https://project-004.herokuapp.com/" target="_blank" rel="noopener noreferrer"> FateBook</a></li>
     <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#drp4" aria-expanded="false" aria-controls="drp4">
-        Huh?
+        You mean like Meta?
       </button>
     </p>
     <div class="collapse" id="drp4">
@@ -69,7 +69,7 @@
     <li><a id = 're' href= "https://flexboxcss-grid-lab.jamesfox12.repl.co/" target="_blank" rel="noopener noreferrer"> Willem Dafoe</a></li>
     <p>
         <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#drp5" aria-expanded="false" aria-controls="drp5">
-          Huh?
+          The actor?
         </button>
       </p>
       <div class="collapse" id="drp5">
